Ajout du fichier schema.prisma et autre

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Remindr</title>
-    <!-- Vous pouvez ajouter ici d'autres éléments d'en-tête, comme des liens vers des fichiers CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title> <!-- Titre dynamique pour chaque page -->
 </head>
 <body>
-    <!-- Vous pouvez ajouter ici une barre de navigation -->
-
-    <!-- Cette ligne est où le contenu spécifique à chaque page sera inséré -->
-    {{{body}}}
-
-    <!-- Vous pouvez ajouter ici un pied de page -->
+    {{{body}}} <!-- Contenu de la page -->
 </body>
 </html>
